--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>登入頁面</title>
+  <title>登入</title>
+  <link rel="shortcut icon" type="image/x-icon" href="https://simage-kr.uniqlo.com/nq/images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="css/login.css">
@@ -15,7 +16,7 @@
   <div id="app">
     <div class="container bg-white border rounded pt-3">
       <div class="row justify-content-center">
-        
+        <img class="logo mb-3" src="img/lifewear_logo.png" alt="">
         <h1 class="h3 mb-3 font-weight-normal">
           請先登入
         </h1>
@@ -39,8 +40,14 @@
         登入失敗，請重新輸入
       </p>
       <p class="mt-3 mb-3 text-muted">
-        &copy; 2021~∞ - 六角學院
+        &copy; 2021~∞ - ユニクロ
       </p>
+    </div>
+
+    <div v-if="loading" class="loading d-flex justify-content-center align-items-center">
+      <div style="width: 3rem; height: 3rem;" class="spinner-border text-danger" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
     </div>
   </div>
 
