--- a/products.html
+++ b/products.html
@@ -5,16 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>產品頁面</title>
+  <title>產品列表</title>
+  <link rel="shortcut icon" type="image/x-icon" href="https://simage-kr.uniqlo.com/nq/images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/products.css">
 </head>
 
 <body class="bg-dark text-white">
   <div id="app">
     <div class="container">
-      <div class="d-flex justify-content-between mt-4">
-        <h1>產品列表</h1>
+      <div class="d-flex justify-content-between align-items-end mt-4">
+        <h1 class="d-flex align-items-center mb-0"><img class="d-block me-3" style="width: 100px;" src="img/1029px-UNIQLO_logo.svg.png" alt="">產品列表</h1>
         <button @click="openModal" class="btn btn-primary" data-action="create">
           建立新的產品
         </button>
@@ -70,7 +72,8 @@
         <div class="modal-content border-0">
           <div class="modal-header bg-dark text-white">
             <h5 id="productModalLabel" class="modal-title">
-              <span>新增產品</span>
+              <span v-if="action === 'create'">新增產品</span>
+              <span v-else>編輯產品</span>
             </h5>
             <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
@@ -117,7 +120,7 @@
                     <input v-model.trim="tempProduct.category" id="category" type="text" class="form-control" placeholder="請輸入分類">
                   </div>
                   <div class="form-group col-md-6">
-                    <label for="price">單位</label>
+                    <label for="unit">單位</label>
                     <input v-model.trim="tempProduct.unit" id="unit" type="text" class="form-control" placeholder="請輸入單位">
                   </div>
                 </div>
@@ -190,6 +193,11 @@
       </div>
     </div>
 
+    <div v-if="loading" class="loading d-flex justify-content-center align-items-center">
+      <div style="width: 3rem; height: 3rem;" class="spinner-border text-danger" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
