--- a/login.html
+++ b/login.html
@@ -49,6 +49,11 @@
         <span class="visually-hidden">Loading...</span>
       </div>
     </div>
+
+    <footer class="bg-secondary text-center py-3">
+      <p>此網頁僅為練習使用，圖片來源為 <a class="text-warning" href="https://www.uniqlo.com/tw/">Uniqlo</a> 所有</p>
+    </footer>
+
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
